--- a/src/app/protected/cranix/groups/groups.page.html
+++ b/src/app/protected/cranix/groups/groups.page.html
@@ -1,18 +1,11 @@
-<!--ion-header>
-  <ion-toolbar>
-    <ion-title>{{ users | translate }}</ion-title>
-  </ion-toolbar>
-</ion-header-->
-
 <cranix-toolbar></cranix-toolbar>
-<ion-content class="ion-padding">
+<ion-content>
   <div>
     <mat-form-field fxFlex="40%">
       <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
     </mat-form-field>
   </div>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-
     <ng-container matColumnDef="select">
       <mat-header-cell *matHeaderCellDef>
         <mat-checkbox (change)="$event ? masterToggle() : null" [checked]="selection.hasValue() && isAllSelected()"
@@ -28,27 +21,24 @@
 
     <ng-container matColumnDef="id">
       <mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'id' | translate }} </mat-header-cell>
-      <mat-cell *matCellDef="let object">{{object.id}}</mat-cell>
+      <mat-cell *matCellDef="let group"> {{group.id}} </mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="uid">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'uid' | translate }} </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.uid}} </mat-cell>
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>{{ 'name' | translate }}</mat-header-cell>
+      <mat-cell *matCellDef="let group" (click)="$event.stopPropagation()">
+        <a (click)="redirectToMember(group)"><span>{{group.name}}</span></a>
+      </mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="surName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'surName' | translate }} </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.surName}} </mat-cell>
+    <ng-container matColumnDef="description">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'description' | translate }}</mat-header-cell>
+      <mat-cell class="description-cell" *matCellDef="let group"> {{group.description}} </mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="givenName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'givenName' | translate }} </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.givenName}} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="role">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'role' | translate }} </mat-header-cell>
-      <mat-cell *matCellDef="let user"> {{user.role}} </mat-cell>
+    <ng-container matColumnDef="groupType">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'groupType' | translate }} </mat-header-cell>
+      <mat-cell *matCellDef="let group"> {{group.groupType}} </mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="actions">
@@ -57,13 +47,15 @@
         <button mat-icon-button color="black" (click)="redirectToEdit(object)">
           <mat-icon class="mat-18">edit</mat-icon>
         </button>
-        <button mat-icon-button color="warn" (click)="redirectToDelete(object)">
-          <mat-icon class="mat-18">delete</mat-icon>
-        </button>
-      </mat-cell>
+          <button mat-icon-button color="warn" (click)="redirectToDelete(object)">
+            <mat-icon class="mat-18">delete</mat-icon>
+          </button>
+        </mat-cell>
     </ng-container>
+
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></mat-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="selection.toggle(row)"></mat-row>>
+
   </table>
-  <!-- at-paginator [pageSizeOptions]="[1, 2, 5]" showFirstLastButtons></mat-paginator -->
+  <!-- mat-paginator [pageSizeOptions]="[20,30,50]" showFirstLastButtons></mat-paginator -->
 </ion-content>
