Create generic popover module for selected object actions.

--- a/src/app/protected/cranix/users/users.page.html
+++ b/src/app/protected/cranix/users/users.page.html
@@ -57,10 +57,10 @@
         <ion-button size="small"  (click)="redirectToAdd()">
           <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
         </ion-button>
-        <ion-button size="small" (click)="openActions()">
+        <ion-button size="small" (click)="openActions($event)">
           <ion-icon slot="icon-only" name="menu"></ion-icon>
         </ion-button>
-        <ion-button size="small"  (click)="openCollums()">
+        <ion-button size="small"  (click)="openCollums($event)">
           <ion-icon slot="icon-only" name="apps"></ion-icon>
         </ion-button>
         <!--ion-button  color="black" (click)="openPopover()">
