--- a/src/app/protected/cephalix/institutes/institutes.page.scss
+++ b/src/app/protected/cephalix/institutes/institutes.page.scss
@@ -4,8 +4,15 @@ table {
     overflow-y: hidden;
     min-width: 500px;
 }
-
+ 
 th.mat-header-cell {
     text-align: left;
     max-width: 300px;
 }
+.mat-row:nth-child(even){
+    background-color: LightGray;
+    }
+
+.mat-row:nth-child(odd){
+    background-color:silver;
+    }
