--- a/src/app/protected/toolbar/toolbar.component.html
+++ b/src/app/protected/toolbar/toolbar.component.html
@@ -6,3 +6,7 @@
     <ion-title>toolbar</ion-title>
   </ion-toolbar>
   </ion-header>
+
+<ion-row style="height: 20%; background-color: red;">
+
+</ion-row>
