--- a/src/app/protected/cranix/groups/groups.page.html
+++ b/src/app/protected/cranix/groups/groups.page.html
@@ -1,6 +1,6 @@
 <cranix-toolbar></cranix-toolbar>
-<ion-content>
-    <ion-searchbar (keyup)="doFilter($event.target.value)" ></ion-searchbar>
+<ion-content scroll-x="true" scroll-y="true">
+  <ion-searchbar (keyup)="doFilter($event.target.value)" ></ion-searchbar>
   <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
     <ng-container matColumnDef="select">
       <mat-header-cell *matHeaderCellDef>
@@ -50,7 +50,7 @@
         </ion-button>
         </mat-header-cell>
       <mat-cell *matCellDef="let object" (click)="$event.stopPropagation()">
-        <ion-button fill="clear"  size="small" (click)="redirectToEdit(object)">
+        <ion-button fill="clear"  size="small" (click)="redirectToEdit($event,object)">
           <ion-icon slot="icon-only" name="create-outline"></ion-icon>
         </ion-button>
         <ion-button  fill="clear" size="small" (click)="redirectToDelete(object)">
