--- a/src/app/protected/cranix/users/users.page.html
+++ b/src/app/protected/cranix/users/users.page.html
@@ -5,7 +5,7 @@
 </ion-header-->
 
 <cranix-toolbar></cranix-toolbar>
-<ion-content class="ion-padding">
+<ion-content scroll-x="true" scroll-y="true" fullscreen="true">
   <div>
     <!-- mat-form-field fxFlex="40%">
       <input matInput type="text" (keyup)="doFilter($event.target.value)" placeholder="Filter">
@@ -54,7 +54,7 @@
 
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef>
-        <ion-button size="small"  (click)="redirectToAdd()">
+        <ion-button size="small"  (click)="redirectToAdd($event)">
           <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
         </ion-button>
         <ion-button size="small" (click)="openActions($event)">
@@ -68,7 +68,7 @@
         </ion-button-->
       </mat-header-cell>
       <mat-cell *matCellDef="let object" (click)="$event.stopPropagation()">
-        <ion-button fill="clear"  size="small" (click)="redirectToEdit(object)">
+        <ion-button fill="clear"  size="small" (click)="redirectToEdit($event,object)">
           <ion-icon slot="icon-only" name="create-outline"></ion-icon>
         </ion-button>
         <ion-button  fill="clear" size="small" (click)="setPasswor(object)">
