Solve redirectToAdd with redirectToEdit to save code.

--- a/src/app/protected/cephalix/institutes/institutes.page.html
+++ b/src/app/protected/cephalix/institutes/institutes.page.html
@@ -157,7 +157,7 @@
 
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef>
-        <ion-button size="small" (click)="redirectToAdd($event)">
+        <ion-button size="small" (click)="redirectToEdit($event,null)">
           <ion-icon slot="icon-only" name="add-circle-outline"></ion-icon>
         </ion-button>
         <ion-button size="small" (click)="openActions($event)">
