--- a/src/app/protected/protected.page.html
+++ b/src/app/protected/protected.page.html
@@ -5,7 +5,7 @@
       <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
         <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false">
           <ion-icon slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'"></ion-icon>
-          <ion-label>{{ p.title }}</ion-label>
+          <ion-label>{{ p.title | translate }}</ion-label>
         </ion-item>
       </ion-menu-toggle>
     </ion-list>
