--- a/src/app/shared/actions/actions.component.html
+++ b/src/app/shared/actions/actions.component.html
@@ -2,7 +2,7 @@
   <ion-label> #  {{'Selected Items: ' | translate }} {{ count }}</ion-label>
 </ion-item>
 <ion-list *ngFor="let item of menu">
-    <ion-item *ngIf="item.enabled" (click)="messages(item)">
+    <ion-item (click)="messages(item.action)">
       <ion-icon name="{{ item.icon }}"></ion-icon>
       <ion-label>{{ item.name | translate }}</ion-label>
     </ion-item>
