--- a/src/app/protected/toolbar/toolbar.component.html
+++ b/src/app/protected/toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{commonName}}, {{roomName}}, {{instituteName}}</ion-title>
+    <ion-title>{{authService.session.commonName}},  {{authService.session.instituteName}} {{authService.session.roomName}}</ion-title>
     <ion-buttons slot="end">
       <ion-button fill="clear" (click)="closeWindow()">
         <ion-badge color="secondary" slot="end">118k</ion-badge>
@@ -12,7 +12,10 @@
         <ion-icon color="danger" name="person"></ion-icon>
       </ion-button>
       <ion-button fill="clear" (click)="closeWindow()">
-        <ion-icon color="danger" name="flag"></ion-icon>
+        <ion-icon color="success" name="flag"></ion-icon>
+      </ion-button>
+      <ion-button  fill="clear" (click)="logOut()">
+        <ion-icon color="danger" name="walk"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
