--- a/src/app/shared/objects-edit/objects-edit.component.html
+++ b/src/app/shared/objects-edit/objects-edit.component.html
@@ -21,9 +21,9 @@
       </ion-item>
       <ion-item *ngSwitchCase="'string'">
         <ion-label position="stacked">{{ key | translate }}</ion-label>
-        <ng-template [ngIf]="defaults[key]"  [ngIfElse]="elseBlock">
+        <ng-template [ngIf]="objectService.selects[key]"  [ngIfElse]="elseBlock">
           <ion-select type="text" formControlName="{{key}}" value="{{object[key]}}">
-            <ion-select-option *ngFor="let option of  defaults[key]" value="{{option}}">{{option | translate}}</ion-select-option>
+            <ion-select-option *ngFor="let option of  objectService.selects[key]" value="{{option}}">{{option | translate}}</ion-select-option>
           </ion-select>
         </ng-template>
         <ng-template #elseBlock>
